<resources>
    <string name="app_name">Visitas GPS</string>
    <string name="action_settings">Settings</string>
    <string name="cliente">Cliente</string>
    <string name="visitar">Visitar</string>
    <string name="Informes">Informes</string>
    <string name="configuracion">Configuración</string>
    <string name="salir">Salir</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="LOGIN">ACCESO AL SISTEMA:</string>
    <string name="Agregar">Agregar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="vacio">"     "</string>
    <string name="Salir">   Salir  </string>
    <string name="Button">Button</string>
    <string name="Pedidos">Pedidos</string>
    <string name="Cobranza">Cobranza</string>
    <string name="Ajustes">Ajustes</string>
    <string name="ChequearPedidos">Chequear Pedidos</string>
    <string name="OPCIONES">OPCIONES DEL SISTEMA</string>
    <string name="espaciolargo">"                    "</string>
    <string name="nrocliente">Nº Cliente</string>
    <string name="Cliente">Cliente</string>
    <string name="BuscarCliente">Buscar Cliente</string>
    <string name="espacio">"           "</string>
    <string name="VerSaldos">Saldos</string>
    <string name="Guardar">Guardar</string>
    <string name="Imprimir">Imprimir</string>
    <string name="Menu">Menu</string>
    <string name="NroFactura">NroFactura</string>
    <string name="Descuentos">Descuentos</string>
    <string name="Vencimiento">Vencimiento</string>
    <string name="Pendiente">Pendiente</string>
    <string name="Pagos">Pagos</string>
    <string name="FormadeCobro">Formade Cobro</string>
    <string name="Total">Total:</string>
    <string name="nombre">nombre</string>
    <string name="numcliente">numcliente</string>
    <string name="codcliente">codcliente</string>
    <string name="filtrarcliente">Filtrar Clientes</string>
    <string name="lista_vacia">No hay elementos en la lista.</string>
    <string name="ClickAqui">Click Aqui</string>
    <string name="Limpiar">Limpiar</string>
    <string name="click">click</string>
    <string name="ver">ver</string>
    <string name="volver">Volver al Menu</string>
    <string name="columna">columna1</string>
    <string name="Cobrar">Cobrar</string>
    <string name="saldos">Facturas con Saldo</string>
    <string name="buscar">buscar</string>
    <string name="aceptar">aceptar</string>
    <string name="title_activity_main">Ejm Tabla</string>
    <string name="id">Nº</string>
    <string name="factura">Nº Factura</string>
    <string name="valor">Valor</string>
    <string name="saldo">Saldo</string>
    <string name="cobro">Cobro</string>
    <string name="numero">12345</string>
    <string name="btnformasdecobro">Formas de cobro</string>
    <string name="ACCEDER">Acceder</string>
    <string name="oTROS" />
    <string name="Cheques">Cheques</string>
    <string name="NotasDeCredito">Notas de Crédito</string>
    <string name="cheque" />
    <string name="banco">Banco:</string>
    <string name="importe">Importe:</string>
    <string name="nrocheque">Nº Cheque:</string>
    <string name="cambiarvencimiento">cambiar vencimiento</string>
    <string name="vence">"      vence:        "</string>
    <string name="agregarelcheque">Agregar el Cheque</string>
    <string name="facturasconsaldo">Facturas con Saldo:</string>
    <string name="efectivoyotrosmedios">Efectivo y Otros Medios</string>
    <string name="forma">Forma de Cobro:</string>
    <string name="agregarformadecobro">Agregar la Forma de Cobro</string>
    <string name="titulo">Sistema Móvil de Gestión</string>
    <string name="amanecer">Amanecer S.A.</string>
    <string name="Version">Versión 1.0</string>
    <string name="buscarnotasdecredito">Buscar Notas de Crédito</string>
    <string name="totalfacturas">Total Facturas:</string>
    <string name="agregarnotadecredito">Agregar la Nota de Credito</string>
    <string name="totalcobros">Total Cobros:</string>
    <string name="fecha">Fecha</string>
    <string name="numerodocumento">Nº</string>
    <string name="cero">0</string>
    <string name="soloforma">Forma</string>
    <string name="cobrador">Cobrador:</string>
    <string name="vendedor">Vendedor:</string>
    <string name="nuevocobro">Nuevo Cobro</string>
    <string name="ultimoscobros">Ver Últimos Cobros</string>
    <string name="reimprimir">Re imprimir</string>
    <string name="cliente2">Cliente  :</string>
    <string name="numero_recibo">Número :</string>
    <string name="anularrecibo">Anular el Cobro</string>
    <string name="estadodelrecibo">Estado del Recibo:</string>
    <string name="nuevo">Nuevo</string>
    <string name="sincronizarusuarios">Sincronizar Usuarios</string>
    <string name="sincronizarclientes">Sincronizar Clientes</string>
    <string name="sincronizarproductos">Sincronizar Productos</string>
    <string name="producto">Producto:</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio:</string>
    <string name="sincronizarbancos">Sincronizar Bancos</string>
    <string name="sincronizarformasdecobro">Sinc.Formas_Cobro</string>
    <string name="cant">Cant</string>
    <string name="SUBTOTAL">Sub Total:</string>
    <string name="des">Desc:</string>
    <string name="sub">Sub:</string>
    <string name="credito">Credito</string>
    <string name="contado">Contado</string>
    <string name="SincronizarPedidos">Crear Tabla de Pedidos</string>
    <string name="verificarpedidos">Ver Pedidos</string>
    <string name="cancelar">cancelar</string>
    <string name="filtrar">Filtrar</string>
    <string name="MontoInteres">Monto Interes:</string>
    <string name="Interes">Interes</string>
    <string name="creartabladesaldos">Crear.Saldos</string>
    <string name="creartabladenotasdecreditos">Crear Notas.Cred</string>
    <string name="cargarruta">Cargar Ruta</string>
    <string name="ingreseelcodigodelclienteavicitar">Cliente :</string>
    <string name="CargarRuta">Cargar Clientes a Visitar</string>
    <string name="MENSAJE">" "</string>
    <string name="sincronizarcobranzas">Crear Tablas de Cobranzas</string>
    <string name="utilidades">Utilidades</string>
    <string name="generarplanilla">Generar Planilla de Cobranzas</string>
    <string name="generar">Por la Seguridad de la Información almacenada en este Móvil, Puede Realizar este Proceso Varias Veces</string>
    <string name="Generar">Generar</string>
    <string name="texto">Imprimir sin Cheque</string>
    <string name="ESPECIAL">Cobranza Especial</string>
    <string name="sacar">Sacar</string>
    <string name="terminar">Terminar</string>
    <string name="nuevacobranzaespecial">Nuevo Cobro Especial</string>
    <string name="cararrecibosespeciales">Cargar Recibos Especiales</string>
    <string name="saldodecheques">Saldo de Cheques:</string>
    <string name="reimprimircobranzas">REIMPRIMIR RECIBOS</string>
    <string name="numerorecibo">Número de Recibo</string>
    <string name="actualizaclientes">Actualizar Un Cliente</string>
    <string name="actualizarcliente">Actualizar Datos de un Cliente</string>
    <string name="ruc">Ruc</string>
    <string name="cobrarinteres">Cargar Interes</string>
    <string name="retencion">Retención :  </string>
    <string name="actualizartodos">Actualizar Todos los Saldos de mis Clientes</string>
    <string name="todoslossaldos">Sincronizar todos los saldos demora varios minutos, asegurese de tener señal de Internet en el Teléfono</string>
    <string name="otrasutilidades">Otras Utilidades</string>
    <string name="corregir">corregir</string>
    <string name="buscarelrecibo">Buscar El Recibo</string>
    <string name="precio2">Valor:</string>
    <string name="nousar">NO USAR</string>
    <string name="che">Chequear</string>
    <string name="informacion">No hay datos pendientes a ser transferidos</string>
    <string name="BORRARPEDIDOS">Borrar Pedidos Viejos ya  enviados</string>
    <string name="lblborrarpedidosviejos">Se borraran los Pedidos viejos que ya fueron enviados, quedaran los últimos 100 Pedidos</string>
    <string name="ChequearPedido">Chequear Pedidos Enviados</string>
    <string name="ActualizarProductos">Actualizar Productos</string>
    <string name="ActualizarTodasNotasCredito">Actualizar Todas las Notas de Crédito</string>
    <string name="arqueo">Arqueo de Caja</string>
    <string name="generararqueo">Generar Arqueo de Cobranzas</string>
    <string name="efectivo">"Efectivo: "</string>
    <string name="chaldia">Cheques al Día:</string>
    <string name="chadelantado">Cheques Adelantados</string>
    <string name="boleta">Depósitos :</string>
    <string name="desdeelrecibo">"Desde  El Recibo : "</string>
    <string name="fechahoraenvio">Hora envío</string>
    <string name="horacierre">Hora Cierre</string>
    <string name="situacion">Situación</string>
    <string name="estado">Estado</string>
    <string name="Mapear">Mapear Clientes</string>
    <string name="textview" />
    <string name="ubicacion">Ubicación del Cliente:</string>
    <string name="fotocliente">Foto Frontal del Negocio</string>
    <string name="SACARFOTO">Fotografiar</string>
    <string name="foto">Foto</string>
    <string name="faltantes">Faltantes</string>
    <string name="Actualizado">Ultima Actualización:</string>
    <string name="NUMEROPEDIDO">Nº Pedido.</string>
    <string name="FichaCliente">Ficha de Cliente</string>
    <string name="ubicacionguardada">Ubicación Guardada</string>
    <string name="ubicacionactual">Ubicación Actual</string>
    <string name="iniciarvisita">Iniciar Visita</string>
    <string name="terminarvisita">Terminar Visita</string>
    <string name="cancelarvisita">Cancelar Visita</string>
    <string name="horainicio">Hora Inicio</string>
    <string name="Visita">Visitas</string>
    <string name="ultimavisita">Ultima Visita:</string>
    <string name="visitaactual">"Visita  Actual "</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="porgps">Por  GPS</string>
    <string name="porantena">Por Antena</string>
    <string name="Enviar">Enviar msm</string>
    <string name="escriba">Escriba el Mensaje</string>
    <string name="Destinatarios">Destinatarios</string>
    <string name="afiliados">Sincronizar Afiliados</string>
    <string name="usuari">usuario</string>
    <string name="reporte">Reporte de Visitas</string>
    <string name="title_activity_activity_listado_visitas">ActivityListadoVisitas</string>
    <string name="Inicio">Inicio</string>
    <string name="Solicitudes">Solicitudes</string>
    <string name="versolicitudes">Ver Estado de Solicitudes</string>
    <string name="nuevasolicitud">Nueva Solicitud</string>
    <string name="observacion">Observaciones</string>
    <string name="tiposolicitud">Tipos de Solicitud</string>
    <string name="todavia">Todavia no es Cliente</string>
    <string name="title_activity_activity_fotos">ActivityFotos</string>
    <string name="fotouno">Foto 1</string>
    <string name="fotodos">Foto 2</string>
    <string name="fototres">Foto 3</string>
    <string name="actualizarsolicitudes">Actualizar Estado de Solicitudes</string>
    <string name="title_activity_activity_presupuesto">ActivityPresupuesto</string>
    <string name="presupuestos">presupuestos</string>
    <string name="sincronizarpresupuestos">Sincronizar Presupuestos</string>
    <string name="verpresupuesto">Ver Presupuestos</string>
    <string name="Destinatario">Destinatario</string>
    <string name="correo">Correo:</string>
    <string name="concopia">Con Copia:</string>
    <string name="distribuidor">Distribuidor</string>
    <string name="prueba">Prueba</string>
    <string name="Actualizar">Actualizar Cliente</string>
    <string name="_0">0 %</string>
    <string name="button">Button</string>
    <string name="start">Start</string>
</resources>