<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <Button
        android:id="@+id/Button02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SincronizarFormasdeCobro"
        android:text="@string/sincronizarformasdecobro" />

    <Button
        android:id="@+id/btnbuscarrecibo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SincronizarUsuarios"
        android:text="@string/sincronizarusuarios" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SincronizarClientes"
        android:text="@string/cliente" />

    <Button
        android:id="@+id/Btnverpresupuestos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SincronizarBancos"
        android:text="@string/sincronizarbancos" />

    <Button
        android:id="@+id/btnguardarfoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SincronizarProductos"
        android:text="@string/sincronizarproductos" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SincronizarSolicitudes"
        android:text="@string/Solicitudes" />

    <Button
        android:id="@+id/button44"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SincronizarTipoSolicitudes"
        android:text="@string/tiposolicitud" />

    <Button
        android:id="@+id/Button303"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SincronizarPresupuestos"
        android:text="@string/sincronizarpresupuestos" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SincronizarPedidos"
        android:text="@string/SincronizarPedidos" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Button104"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="SincronizarSaldos"
            android:text="@string/creartabladesaldos" />

        <Button
            android:id="@+id/Button04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:onClick="SincronizarNotasDeCredito"
            android:text="@string/creartabladenotasdecreditos" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Button05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="SincronizarCobranzas"
                android:text="@string/Cobranza" />

            <Button
                android:id="@+id/Btnreimprimir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ReimprimirCobranzas"
                android:text="@string/reimprimircobranzas" />
        </LinearLayout>

    <Button
        android:id="@+id/btnfoto3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="salir"
        android:text="@string/Salir" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/porcentaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0 %" />


</LinearLayout>
