<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/fragment_left_menu_login1"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:background="#8BC34A"
                android:drawableTop="@drawable/clienteicono"

                android:gravity="bottom|center"
                android:onClick="lanzarmapeo"
                android:text="@string/Mapear"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fragment_left_menu_login2"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:background="#FFFFFF"
                android:drawableTop="@drawable/visitar1"
                android:gravity="bottom|center"
                android:onClick="visitar"
                android:text="@string/visitar"
                android:textSize="24sp" />

        </TableRow>

        <!--<TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"></TableRow>-->

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray"
                    android:onClick="lanzaractualizacion"
                    android:text="@string/Actualizar" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/espacio" />


            </LinearLayout>

        </TableRow>

        <Button
            android:id="@+id/btnsalida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:background="@android:color/darker_gray"
            android:onClick="Cerrar"
            android:text="@string/salir" />
    </TableLayout>

</RelativeLayout>